# oq-platform-ipt

./: .gitignore  CHANGELOG  MANIFEST.in  manage.py  pyproject.toml  requirements-py310-oq-platform-standalone-linux64.txt  requirements-py311-build-linux64.txt  requirements-py311-oq-platform-standalone-linux64.txt  requirements-py36-linux64.txt  requirements-py36-macos.txt  requirements-py36-oq-platform-standalone-linux64.txt  requirements-py38-oq-platform-standalone-linux64.txt  runserver.sh  setup.py
openquakeplatform/common/templates/: base.html
openquakeplatform/ipt/: urls.py
openquakeplatform_ipt/: __init__.py  build_rupture_plane.py  common.py  converters.py  models.py  multienv_common.py  tests.py  urls.py  views.py
openquakeplatform_ipt/helpers/: demos-analyze.sh
openquakeplatform_ipt/templates/ipt/: ipt.html  ipt.js
openquakeplatform_ipt/templates/widgets/: button_widget.html
openquakeplatform_ipt/test/: __init__.py  demos_test.no  demos_test.py  examples_test.py  ipt_test.py  platform.py
openquakeplatform_ipt/test/expected/: example_1010.xml  example_1940.xml  example_1950.xml  example_198.txt  example_199.xml  example_1990.xml  example_201.xml  example_299.xml  example_2990.xml  example_401.xml  example_499.xml  example_4990.xml  example_5010.xml  example_5020.xml  example_5030.xml  example_6964.txt  example_6971.txt  example_6974.txt  example_6984.txt  example_7964.txt  example_7974.txt  example_7984.txt  sitecond_upload_with_header_test.xml
openquakeplatform_plugins/ipt/: urls.py
oq_ipt/: settings.py  urls.py  wsgi.py
(+96 files in other folders)
